# go-jsonnet

./: .bazelignore  .goreleaser.yml  BUILD.bazel  MODULE.bazel  README.md  builtins.go  debugger.go  error_formatter.go  go.mod  go.sum  imports.go  interpreter.go  jsonnet_test.go  main_test.go  runtime_error.go  setup.py  thunks.go  trace.go  value.go  vm.go
.github/workflows/: ci.yml  create_archive.sh  install-go.sh  publish-python.yml  release.yml
ast/: BUILD.bazel
astgen/: BUILD.bazel
bazel/: deps.bzl  repositories.bzl
c-bindings/: BUILD.bazel  c-bindings.go
c-bindings-tests/: compat_test.py
cmd/dumpstdlibast/: BUILD.bazel  dumpstdlibast.go
cmd/internal/cmd/: BUILD.bazel
cmd/jsonnet/: BUILD.bazel  cmd.go
cmd/jsonnet-deps/: BUILD.bazel  cmd.go
cmd/jsonnet-lint/: BUILD.bazel  cmd.go
cmd/jsonnet-trace/: BUILD.bazel  cmd.go
cmd/jsonnetfmt/: BUILD.bazel  cmd.go
cmd/wasm/: BUILD.bazel  main.go
examples/bazel/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  test_test.go  use_go_jsonnet.go
examples/bazel/testdata/: map.jsonnet  relpath.libsonnet
examples/bazel/testdata/f1/: relpath.libsonnet
examples/bazel/testdata/f1/f2/: relpath.libsonnet
examples/bazel/testdata/f1/f2/f3/: relpath.jsonnet
examples/bazel/testdata/function/: function.libsonnet  main.jsonnet
examples/bazel/testdata/multi-conditionals/: 0.jsonnet  1.jsonnet  2.jsonnet  3.jsonnet  4.jsonnet  5.jsonnet
formatter/: BUILD.bazel  formatter.go  formatter_test.go
formatter/testdata/: empty_comment.fmt.golden  empty_comment.jsonnet
internal/dump/: BUILD.bazel
internal/errors/: BUILD.bazel  static_error.go
internal/formatter/: BUILD.bazel  add_plus_object.go  enforce_comment_style.go  enforce_max_blank_lines.go  enforce_string_style.go  fix_indentation.go  fix_newlines.go  fix_parens.go  fix_trailing_commas.go  jsonnetfmt.go  no_redundant_slice_colon.go  pretty_field_names.go  remove_plus_object.go  sort_imports.go  strip.go  unparser.go
internal/parser/: BUILD.bazel  context.go  lexer.go  lexer_test.go  parser.go  string_util.go
internal/pass/: BUILD.bazel  pass.go
internal/program/: BUILD.bazel  desugarer.go  program.go  static_analyzer.go  static_analyzer_test.go
internal/testutils/: BUILD.bazel
linter/: BUILD.bazel  linter.go  linter_test.go
linter/internal/common/: BUILD.bazel  common.go
linter/internal/traversal/: BUILD.bazel  traversal.go
linter/internal/types/: BUILD.bazel  build_graph.go  check.go  desc.go  graph.go  stdlib.go
linter/internal/variables/: BUILD.bazel  find_variables.go
testdata/: array_comp_try_iterate_over_empty_string.golden  array_comp_try_iterate_over_string.golden  object_comp_try_iterate_over_obj.golden  object_comp_try_iterate_over_string.golden  std.manifestYamlDoc_error.golden  std.maxArrayOnEmpty.golden  std.minArrayOnEmpty.golden
testdata/cpp-tests-override/: fmt_help.golden.stdout  fmt_no_args.golden.stderr
toolutils/: BUILD.bazel  ast.go
trace/: index.html  model.go  server.go  tracer.go
