load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "use_go_jsonnet_lib",
    srcs = ["use_go_jsonnet.go"],
    importpath = "github.com/y1hao/go-jsonnet/examples/bazel",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_go_jsonnet//:go_default_library"],
)

go_binary(
    name = "use_go_jsonnet",
    embed = [":use_go_jsonnet_lib"],
    visibility = ["//visibility:public"],
)
