bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "jsonnet_go")
local_path_override(
    module_name = "jsonnet_go",
    path = "../..",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.7")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_jsonnet",
)

override_repo(
    go_deps,
    com_github_google_go_jsonnet = "jsonnet_go",
)
